apps/zigbee2mqtt/zigbee2mqtt-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
spec:
  type: ClusterIP
  selector:
    app: zigbee2mqtt
  ports:
    - name: zigbee2mqtt
      port: 8080
      targetPort: 8080
