apps/zigbee2mqtt/zigbee2mqtt-local-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt-local

  labels:
    type: local
spec:
  rules:
    - host: zigbee2mqtt.local
      http:
        paths:
          - backend:
              service:
                name: zigbee2mqtt
                port:
                  number: 8080
            path: /
            pathType: Prefix
